qt/gen_qwindow.nim

proc fcQWindow_heightChanged(self: pointer, arg: cint): void {.importc: "QWindow_heightChanged".}
proc fQWindow_connect_heightChanged(self: pointer, slot: int) {.importc: "QWindow_connect_heightChanged".}
proc fcQWindow_minimumWidthChanged(self: pointer, arg: cint): void {.importc: "QWindow_minimumWidthChanged".}
proc fQWindow_connect_minimumWidthChanged(self: pointer, slot: int) {.importc: "QWindow_connect_minimumWidthChanged".}
proc fcQWindow_minimumHeightChanged(self: pointer, arg: cint): void {.importc: "QWindow_minimumHeightChanged".}
proc fQWindow_connect_minimumHeightChanged(self: pointer, slot: int) {.importc: "QWindow_connect_minimumHeightChanged".}
proc fcQWindow_maximumWidthChanged(self: pointer, arg: cint): void {.importc: "QWindow_maximumWidthChanged".}
proc fQWindow_connect_maximumWidthChanged(self: pointer, slot: int) {.importc: "QWindow_connect_maximumWidthChanged".}
proc fcQWindow_maximumHeightChanged(self: pointer, arg: cint): void {.importc: "QWindow_maximumHeightChanged".}
proc fQWindow_connect_maximumHeightChanged(self: pointer, slot: int) {.importc: "QWindow_connect_maximumHeightChanged".}
proc fcQWindow_visibleChanged(self: pointer, arg: bool): void {.importc: "QWindow_visibleChanged".}
proc fQWindow_connect_visibleChanged(self: pointer, slot: int) {.importc: "QWindow_connect_visibleChanged".}
proc fcQWindow_visibilityChanged(self: pointer, visibility: cint): void {.importc: "QWindow_visibilityChanged".}
proc fQWindow_connect_visibilityChanged(self: pointer, slot: int) {.importc: "QWindow_connect_visibilityChanged".}
proc fcQWindow_activeChanged(self: pointer, ): void {.importc: "QWindow_activeChanged".}
proc fQWindow_connect_activeChanged(self: pointer, slot: int) {.importc: "QWindow_connect_activeChanged".}
proc fcQWindow_contentOrientationChanged(self: pointer, orientation: cint): void {.importc: "QWindow_contentOrientationChanged".}
proc fQWindow_connect_contentOrientationChanged(self: pointer, slot: int) {.importc: "QWindow_connect_contentOrientationChanged".}
proc fcQWindow_focusObjectChanged(self: pointer, objectVal: pointer): void {.importc: "QWindow_focusObjectChanged".}
proc fQWindow_connect_focusObjectChanged(self: pointer, slot: int) {.importc: "QWindow_connect_focusObjectChanged".}
proc fcQWindow_opacityChanged(self: pointer, opacity: float64): void {.importc: "QWindow_opacityChanged".}
proc fQWindow_connect_opacityChanged(self: pointer, slot: int) {.importc: "QWindow_connect_opacityChanged".}
proc fcQWindow_transientParentChanged(self: pointer, transientParent: pointer): void {.importc: "QWindow_transientParentChanged".}
proc fQWindow_connect_transientParentChanged(self: pointer, slot: int) {.importc: "QWindow_connect_transientParentChanged".}
proc fcQWindow_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWindow_tr2".}
proc fcQWindow_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWindow_tr3".}
proc fcQWindow_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWindow_trUtf82".}
proc fcQWindow_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWindow_trUtf83".}
proc fcQWindow_setFlag2(self: pointer, param1: cint, on: bool): void {.importc: "QWindow_setFlag2".}
proc fcQWindow_isAncestorOf2(self: pointer, child: pointer, mode: cint): bool {.importc: "QWindow_isAncestorOf2".}
proc fQWindow_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QWindow_virtualbase_metaObject".}
proc fcQWindow_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QWindow_override_virtual_metaObject".}
proc fQWindow_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QWindow_virtualbase_metacast".}
proc fcQWindow_override_virtual_metacast(self: pointer, slot: int) {.importc: "QWindow_override_virtual_metacast".}
proc fQWindow_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QWindow_virtualbase_metacall".}
proc fcQWindow_override_virtual_metacall(self: pointer, slot: int) {.importc: "QWindow_override_virtual_metacall".}
proc fQWindow_virtualbase_surfaceType(self: pointer, ): cint{.importc: "QWindow_virtualbase_surfaceType".}
proc fcQWindow_override_virtual_surfaceType(self: pointer, slot: int) {.importc: "QWindow_override_virtual_surfaceType".}
proc fQWindow_virtualbase_format(self: pointer, ): pointer{.importc: "QWindow_virtualbase_format".}
proc fcQWindow_override_virtual_format(self: pointer, slot: int) {.importc: "QWindow_override_virtual_format".}
proc fQWindow_virtualbase_size(self: pointer, ): pointer{.importc: "QWindow_virtualbase_size".}
proc fcQWindow_override_virtual_size(self: pointer, slot: int) {.importc: "QWindow_override_virtual_size".}
proc fQWindow_virtualbase_accessibleRoot(self: pointer, ): pointer{.importc: "QWindow_virtualbase_accessibleRoot".}
proc fcQWindow_override_virtual_accessibleRoot(self: pointer, slot: int) {.importc: "QWindow_override_virtual_accessibleRoot".}
proc fQWindow_virtualbase_focusObject(self: pointer, ): pointer{.importc: "QWindow_virtualbase_focusObject".}
proc fcQWindow_override_virtual_focusObject(self: pointer, slot: int) {.importc: "QWindow_override_virtual_focusObject".}
proc fQWindow_virtualbase_exposeEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_exposeEvent".}
proc fcQWindow_override_virtual_exposeEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_exposeEvent".}
proc fQWindow_virtualbase_resizeEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_resizeEvent".}
proc fcQWindow_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_resizeEvent".}
proc fQWindow_virtualbase_moveEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_moveEvent".}
proc fcQWindow_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_moveEvent".}
proc fQWindow_virtualbase_focusInEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_focusInEvent".}
proc fcQWindow_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_focusInEvent".}
proc fQWindow_virtualbase_focusOutEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_focusOutEvent".}
proc fcQWindow_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_focusOutEvent".}
proc fQWindow_virtualbase_showEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_showEvent".}
proc fcQWindow_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_showEvent".}
proc fQWindow_virtualbase_hideEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_hideEvent".}
proc fcQWindow_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_hideEvent".}
proc fQWindow_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QWindow_virtualbase_event".}
proc fcQWindow_override_virtual_event(self: pointer, slot: int) {.importc: "QWindow_override_virtual_event".}
proc fQWindow_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_keyPressEvent".}
proc fcQWindow_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_keyPressEvent".}
proc fQWindow_virtualbase_keyReleaseEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_keyReleaseEvent".}
proc fcQWindow_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_keyReleaseEvent".}
proc fQWindow_virtualbase_mousePressEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_mousePressEvent".}
proc fcQWindow_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_mousePressEvent".}
proc fQWindow_virtualbase_mouseReleaseEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_mouseReleaseEvent".}
proc fcQWindow_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_mouseReleaseEvent".}
proc fQWindow_virtualbase_mouseDoubleClickEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_mouseDoubleClickEvent".}
proc fcQWindow_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_mouseDoubleClickEvent".}
proc fQWindow_virtualbase_mouseMoveEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_mouseMoveEvent".}
proc fcQWindow_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_mouseMoveEvent".}
proc fQWindow_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_wheelEvent".}
proc fcQWindow_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_wheelEvent".}
proc fQWindow_virtualbase_touchEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_touchEvent".}
proc fcQWindow_override_virtual_touchEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_touchEvent".}
proc fQWindow_virtualbase_tabletEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_tabletEvent".}
proc fcQWindow_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_tabletEvent".}
proc fQWindow_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QWindow_virtualbase_nativeEvent".}
proc fcQWindow_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_nativeEvent".}
proc fQWindow_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QWindow_virtualbase_eventFilter".}
proc fcQWindow_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QWindow_override_virtual_eventFilter".}
proc fQWindow_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QWindow_virtualbase_timerEvent".}
proc fcQWindow_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_timerEvent".}
proc fQWindow_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QWindow_virtualbase_childEvent".}
proc fcQWindow_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_childEvent".}
proc fQWindow_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QWindow_virtualbase_customEvent".}
proc fcQWindow_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_customEvent".}
proc fQWindow_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QWindow_virtualbase_connectNotify".}
proc fcQWindow_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QWindow_override_virtual_connectNotify".}
proc fQWindow_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QWindow_virtualbase_disconnectNotify".}
proc fcQWindow_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QWindow_override_virtual_disconnectNotify".}
proc fcQWindow_staticMetaObject(): pointer {.importc: "QWindow_staticMetaObject".}
proc fcQWindow_delete(self: pointer) {.importc: "QWindow_delete".}


func init*(T: type QWindow, h: ptr cQWindow): QWindow =
  T(h: h)
proc create*(T: type QWindow, ): QWindow =

  QWindow.init(fcQWindow_new())
proc create*(T: type QWindow, parent: QWindow): QWindow =

  QWindow.init(fcQWindow_new2(parent.h))
proc create2*(T: type QWindow, screen: gen_qscreen.QScreen): QWindow =

  QWindow.init(fcQWindow_new3(screen.h))
proc metaObject*(self: QWindow, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQWindow_metaObject(self.h))

proc metacast*(self: QWindow, param1: cstring): pointer =

  fcQWindow_metacast(self.h, param1)
